--- a/src/HackerRank/HackerRank/HackerRank.fsproj
+++ b/src/HackerRank/HackerRank/HackerRank.fsproj
@@ -61,6 +61,9 @@
     <Content Include="GridSearch.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ManasaAndStones.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
